--- a/src/Pages/Main.module.css
+++ b/src/Pages/Main.module.css
@@ -197,6 +197,10 @@
     padding-right: 20px;
 }
 
+.movieComponent h1{
+    color: #4e4d4d;
+}
+
 .moviePoster{
     width: 200px;
     height: 300px;
