--- a/src/Pages/Genre.module.css
+++ b/src/Pages/Genre.module.css
@@ -44,6 +44,18 @@
     font-weight: bold;
 }
 
+.mainLogo:hover{
+    cursor: pointer;
+}
+
+.searchMovie button:hover{
+    cursor: pointer;
+}
+
+.buttonLogout button:hover{
+    cursor: pointer;
+}
+
 .genreBottom h1 {
     color: #fff; 
     position: absolute; 
@@ -71,6 +83,10 @@
 .moviePoster {
     width: 210px;
     height: 300px;
+}
+
+.moviePoster:hover{
+    cursor: pointer;
 }
 
 .movieTitle {
